--- a/HyperAutomation.ControlRoom/Client/Layout/AuthLayout.razor.css
+++ b/HyperAutomation.ControlRoom/Client/Layout/AuthLayout.razor.css
@@ -10,7 +10,7 @@
     float: right;
     width: 100%;
     min-height: 100vh;
-    border-top: 2px solid #e14eca;
+/*    border-top: 2px solid #e14eca;*/
     background: linear-gradient(#1e1e2f, #1e1e24);
     transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
 }
