- Improving the login component

--- a/HyperAutomation.ControlRoom/Client/Layout/AuthLayout.razor
+++ b/HyperAutomation.ControlRoom/Client/Layout/AuthLayout.razor
@@ -2,13 +2,13 @@
 
 <CascadingValue Value="this">
     <div class="adx-page">
-        <div class="adx-main-panel">
+        <div class="adx-main-panel adx-background">
             <BSNavbar IsExpand="true" HideLight="true">
                 <div class="container-fluid">
                     <div class="adx-navbar-toggle-area">
-                        <span class="adx-navbar-text">Login</span>
+                        <BSImage src="images/logo_adiantex.jpeg" />
+                        <span class="adx-navbar-text">Control Center</span>
                     </div>
-                    <AuthMenuBar />
                 </div>
             </BSNavbar>
 
