--- a/HyperAutomation.ControlRoom/Client/Pages/Auth/Login.razor
+++ b/HyperAutomation.ControlRoom/Client/Pages/Auth/Login.razor
@@ -11,7 +11,7 @@
                 <BSForm Class="adx-form" Model="formsModelFocus" OnValidSubmit="@(() => Console.WriteLine())">
                     <BSCard Class="adx-card-login adx-card-white">
                         <BSCard CardType="BlazorStrap.CardType.Header">
-                            <img  alt="..." src="images/card-primary.png" />
+                            <img  alt="..." src="images/card-info.png" />
                             <BSCard CardType="BlazorStrap.CardType.Title">
                                 Login
                             </BSCard>
@@ -20,7 +20,7 @@
                             <div class="input-group">
                                 <div class="input-group-prepend">
                                     <span class="input-group-text">
-                                        <i class="tim-icons icon-email-85" />
+                                        <RadzenIcon Icon="mail_outline" />
                                     </span>
                                 </div>
                                 <input type="text" class="form-control" placeholder="Email" aria-label="Username" aria-describedby="basic-addon1">
@@ -28,7 +28,7 @@
                             <div class="input-group">
                                 <div class="input-group-prepend">
                                     <span class="input-group-text">
-                                        <i class="tim-icons icon-lock-circle" />
+                                        <RadzenIcon Icon="lock_open" />
                                     </span>
                                 </div>
                                 <input type="text" class="form-control" placeholder="Password" aria-label="Password" aria-describedby="basic-addon1">
