--- a/HyperAutomation.ControlRoom/Client/Layout/AuthLayout.razor.css
+++ b/HyperAutomation.ControlRoom/Client/Layout/AuthLayout.razor.css
@@ -10,7 +10,6 @@
     float: right;
     width: 100%;
     min-height: 100vh;
-/*    border-top: 2px solid #e14eca;*/
     background: linear-gradient(#1e1e2f, #1e1e24);
     transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
 }
@@ -48,6 +47,18 @@
     padding-left: 2px;
 }
 
+::deep .adx-navbar-toggle-area img {
+    height: 3vh;
+}
+
+::deep .adx-navbar-toggle-area .adx-navbar-text {
+    color: white;
+    font-size: 2em;
+    font-weight: 900;
+    line-height: 1.05;
+    padding-left: 10px;
+}
+
 .container-fluid {
     padding-left: 5px;
     margin-right: 0px;
@@ -74,12 +85,12 @@
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    background-color: green;
+    background-color: transparent;
     bottom: 0;
 }
 
 .adx-background {
-    background: url(../images/login/bg-completo-web-01.svg.xhtml) !important;
+    background: url(images/meteor.svg) !important;
     background-repeat: no-repeat !important;
     background-size: cover !important;
 }
