--- a/HyperAutomation.ControlRoom/Client/Pages/Auth/Logout.razor
+++ b/HyperAutomation.ControlRoom/Client/Pages/Auth/Logout.razor
@@ -21,7 +21,7 @@
         try
         {
             await authStateProvider.Logout();
-            navigation.NavigateTo("/");
+            navigation.NavigateTo("/login");
         }
         catch (Exception)
         {
