--- a/HyperAutomation.ControlRoom/Client/Pages/_Imports.razor
+++ b/HyperAutomation.ControlRoom/Client/Pages/_Imports.razor
@@ -4,3 +4,4 @@
 @using BlazorStrap.Extensions.FluentValidation
 @using Radzen
 @using Radzen.Blazor
+@attribute [Microsoft.AspNetCore.Authorization.Authorize]
