--- a/HyperAutomation.ControlRoom/Client/_Imports.razor
+++ b/HyperAutomation.ControlRoom/Client/_Imports.razor
@@ -16,3 +16,4 @@
 @using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Authorization
 @using HyperAutomation.ControlRoom.Client.Auth
+@using HyperAutomation.ControlRoom.Shared.Extensions
