--- a/HyperAutomation.ControlRoom/Client/Components/MenuBar.razor
+++ b/HyperAutomation.ControlRoom/Client/Components/MenuBar.razor
@@ -37,7 +37,13 @@
                 <RadzenProfileMenuItem Text="FileInput" Path="fileinput" Icon="attach_file"></RadzenProfileMenuItem>
                 <RadzenProfileMenuItem Text="Dialog" Path="dialog" Icon="perm_media"></RadzenProfileMenuItem>
                 <RadzenProfileMenuItem Text="Notification" Path="notification" Icon="announcement"></RadzenProfileMenuItem>
+                <RadzenProfileMenuItem Text="Sair" Path="logout" Icon="logout"></RadzenProfileMenuItem>
             </ChildContent>
         </RadzenProfileMenu>
     </RadzenMenu>
 </div>
+
+
+@code {
+
+} 
