--- a/HyperAutomation.ControlRoom/Client/Layout/MainLayout.razor
+++ b/HyperAutomation.ControlRoom/Client/Layout/MainLayout.razor
@@ -1,37 +1,51 @@
 ﻿@inherits LayoutComponentBase
 @using HyperAutomation.ControlRoom.Shared
+@inject NavigationManager navigation
+@inject IJSRuntime js
 
-<RadzenDialog />
-<RadzenNotification />
-<CascadingValue Value="this">
-    <div class="@PageCss">
-        <div class="@SidebarCss">
-            <Sidebar @bind-SidebarMini="SidebarMini" />
-        </div>
-        <div class="@MainPanelCss">
-            <BSNavbar IsExpand="true" HideLight="true">
-                <div class="container-fluid">
-                    <div class="adx-navbar-toggle-area">
-                        <BSButton Class="btn-jus" Color="Color.Link" @onclick="ToggleSidebar">
-                            <i class="fas fa-bars @ToggleRegularCss"></i>
-                            <i class="fas fa-list-ul  @ToggleMiniCss"></i>
-                        </BSButton>
-                        <span class="adx-navbar-text">MEUS BOTS</span>
-                    </div>
-                    <MenuBar />
+<AuthorizeView>
+    <Authorized>
+        <RadzenDialog />
+        <RadzenNotification />
+        <CascadingValue Value="this">
+            <div class="@PageCss">
+                <div class="@SidebarCss">
+                    <Sidebar @bind-SidebarMini="SidebarMini" />
                 </div>
-            </BSNavbar>
+                <div class="@MainPanelCss">
+                    <BSNavbar IsExpand="true" HideLight="true">
+                        <div class="container-fluid">
+                            <div class="adx-navbar-toggle-area">
+                                <BSButton Class="btn-jus" Color="Color.Link" @onclick="ToggleSidebar">
+                                    <i class="fas fa-bars @ToggleRegularCss"></i>
+                                    <i class="fas fa-list-ul  @ToggleMiniCss"></i>
+                                </BSButton>
+                                <span class="adx-navbar-text">MEUS BOTS</span>
+                            </div>
+                            <MenuBar />
+                        </div>
+                    </BSNavbar>
 
-            <div class="adx-content">
-                @Body
+                    <div class="adx-content">
+                        @Body
+                    </div>
+                    <Footer IsFluid=@true />
+                </div>
             </div>
-            <Footer IsFluid=@true />
-        </div>
-    </div>
-</CascadingValue>
+        </CascadingValue>
+    </Authorized>
+    <NotAuthorized>
+        @if (true)
+        {
+            navigation.NavigateTo($"login?returnUrl={Uri.EscapeDataString(navigation.Uri)}");
+        }
+    </NotAuthorized>
+</AuthorizeView>
 
 @code{
-    [Inject] public IJSRuntime JS { get; set; }
+    [CascadingParameter]
+    protected Task<AuthenticationState> AuthStat { get; set; }
+
     private bool SidebarMini = false;
     private bool DarkMode = false;
 
@@ -70,7 +84,8 @@
 
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
-        if (firstRender)
-            await JS.InvokeVoidAsync("perfectScrollbarCreate", ".adx-main-panel");
+        var user = (await AuthStat).User;
+        if (firstRender && user.Identity.IsAuthenticated)
+            await js.InvokeVoidAsync("perfectScrollbarCreate", ".adx-main-panel");
     }
 }
