--- a/HyperAutomation.ControlRoom/Client/Pages/Auth/Login.razor
+++ b/HyperAutomation.ControlRoom/Client/Pages/Auth/Login.razor
@@ -8,10 +8,10 @@
     <BSContainer>
         <BSRow Class="h-100">
             <BSCol class="ml-auto mr-auto" LG="5" MD="7">
-                <BSForm Class="adx-form" Model="formsModelFocus" OnValidSubmit="@(() => Console.WriteLine())">
+                <BSForm Model="@loginModel" Class="adx-form" UserValidation="true" @ref="loginForm" OnSubmit="DoLogin">
                     <BSCard Class="adx-card-login adx-card-white">
                         <BSCard CardType="BlazorStrap.CardType.Header">
-                            <img  alt="..." src="images/card-info.png" />
+                            <img alt="..." src="images/card-info.png" />
                             <BSCard CardType="BlazorStrap.CardType.Title">
                                 Login
                             </BSCard>
@@ -23,7 +23,7 @@
                                         <RadzenIcon Icon="mail_outline" />
                                     </span>
                                 </div>
-                                <input type="text" class="form-control" placeholder="Email" aria-label="Username" aria-describedby="basic-addon1">
+                                <BSInput InputType="InputType.Text" Class="form-control" PlaceHolder="Username ou Email" @bind-Value="@loginModel.Login" />
                             </div>
                             <div class="input-group">
                                 <div class="input-group-prepend">
@@ -31,11 +31,11 @@
                                         <RadzenIcon Icon="lock_open" />
                                     </span>
                                 </div>
-                                <input type="text" class="form-control" placeholder="Password" aria-label="Password" aria-describedby="basic-addon1">
+                                <BSInput InputType="InputType.Password" Class="form-control" PlaceHolder="Password" @bind-Value="@loginModel.Password" />
                             </div>
                         </BSCard>
                         <BSCard CardType="BlazorStrap.CardType.Footer">
-                            <BSButton IsBlock="true" ButtonType="BlazorStrap.ButtonType.Button" Class="mb-4" Color="Color.Primary" Size="Size.Large">
+                            <BSButton IsBlock="true" ButtonType="BlazorStrap.ButtonType.Submit" Class="mb-4" Color="Color.Primary" Size="Size.Large">
                                 Entrar
                             </BSButton>
                             <div class="float-left">
@@ -60,105 +60,67 @@
     </BSContainer>
 </div>
 
-    @*
-        <div class="adx-login col-6">
-            <BSAlert Exibir="loginFalhou">
-                <h5>@Mensagem</h5>
-            </BSAlert>
+@code {
+    BSForm loginForm;
+    LoginModel loginModel = new LoginModel();
 
-            <div class="card-body">
-                <h5 class="card-title">Login</h5>
-                <EditForm Model="userprofile" OnValidSubmit="FazerLogin">
-                    <DataAnnotationsValidator />
+    bool loginFalhou = false;
+    string mensagem { get; set; }
 
-                    <div class="form-group">
-                        <label>Email</label>
-                        <InputText class="form-control"
-                                   @bind-Value="userprofile.Email" />
-                        <ValidationMessage For="@(()=> userprofile.Email)" />
-                    </div>
-                    <div class="form-group">
-                        <label>Password</label>
-                        <InputText type="password" class="form-control"
-                                   @bind-Value="userprofile.Password" />
-                        <ValidationMessage For="@(()=> userprofile.Password)" />
-                    </div>
-                    <button type="submit" class="btn btn-outline-primary btn-sm">Login</button>
-                </EditForm>
-            </div>
-        </div>
-    *@
+    async Task DoLogin()
+    {
+        mensagem = string.Empty;
 
-    @code {
-        string userName = "admin";
-        string password = "admin";
-
-        void OnLogin(LoginArgs args, string name)
+        try
         {
-            //console.Log($"{name} -> Username: {args.Username} and password: {args.Password}");
-        }
 
-        void OnRegister(string name)
-        {
-            //console.Log($"{name} -> Register");
-        }
-
-        void OnResetPassword(string value, string name)
-        {
-            //console.Log($"{name} -> ResetPassword for user: {value}");
-        }
-
-        private FormsModel formsModelFocus = new FormsModel();
-        private BSInput<string> focusInputElement;
-
-        public class FormsModel
-        {
-            public string Valid { get; set; }
-            public string InValid { get; set; }
-            public string Blank { get; set; }
-            public string Email { get; set; } = "email@example.com";
-        }
-    }
-
-    @code {
-        private UserProfile userprofile = new UserProfile();
-
-        bool loginFalhou = false;
-
-        [Parameter]
-        public string Mensagem { get; set; }
-
-        async Task FazerLogin()
-        {
-            try
+            if (string.IsNullOrEmpty(loginModel.Login))
             {
-                //var result = await http.PostJsonAsync<UserToken>("api/account/login", userinfo);
-
-                var loginAsJson = JsonSerializer.Serialize(userprofile);
-
-                var httpResponse = await http.PostAsync("api/account/login",
-                         new StringContent(loginAsJson, Encoding.UTF8, "application/json"));
-
-                if (httpResponse.IsSuccessStatusCode)
-                {
-                    var responseAsString = await httpResponse.Content.ReadAsStringAsync();
-
-                    var loginResult = JsonSerializer.Deserialize<UserToken>(responseAsString,
-                         new JsonSerializerOptions { PropertyNameCaseInsensitive = true });
-
-                    await authStateProvider.Login(loginResult.Token);
-                    navigation.NavigateTo("/");
-                }
-                else
-                {
-                    loginFalhou = true;
-                    Mensagem = $"Não foi possível realizar o Login do usuário.(Erro: {httpResponse.StatusCode})";
-                }
+                mensagem = "Informe o e-mail (ou o nome de usuário)";
             }
-            catch (Exception)
+
+            if (string.IsNullOrEmpty(loginModel.Password))
+            {
+                if (string.IsNullOrEmpty(mensagem))
+                    mensagem += " e a senha!";
+                else
+                    mensagem = "Informe a senha!";
+            }
+
+            if (string.IsNullOrWhiteSpace(loginModel.Login) || string.IsNullOrWhiteSpace(loginModel.Password))
+            {
+                mensagem = "Email ou Senha inválido(s)";
+            }
+
+            if (!string.IsNullOrEmpty(mensagem))
+                return;
+
+            var loginAsJson = JsonSerializer.Serialize(loginModel);
+
+            var httpResponse = await http.PostAsync("api/account/login",
+                     new StringContent(loginAsJson, Encoding.UTF8, "application/json"));
+
+            if (httpResponse.IsSuccessStatusCode)
+            {
+                var responseAsString = await httpResponse.Content.ReadAsStringAsync();
+
+                var loginResult = JsonSerializer.Deserialize<UserToken>(responseAsString,
+                     new JsonSerializerOptions { PropertyNameCaseInsensitive = true });
+
+                await authStateProvider.Login(loginResult.Token);
+                navigation.NavigateTo($"{navigation.Uri.GetQueryParm("returnUrl")}");
+            }
+            else
             {
                 loginFalhou = true;
-                Mensagem = "Não foi possível realizar o Login do Usuário...";
+                mensagem = $"Não foi possível realizar o Login do usuário.(Erro: {httpResponse.StatusCode})";
             }
         }
+        catch (Exception)
+        {
+            loginFalhou = true;
+            mensagem = "Não foi possível realizar o Login do Usuário...";
+        }
     }
+}
+
