--- a/HyperAutomation.ControlRoom/Client/Components/Sidebar.razor
+++ b/HyperAutomation.ControlRoom/Client/Components/Sidebar.razor
@@ -1,5 +1,5 @@
 ﻿@implements IDisposable
-@using HyperAutomation.ControlRoom.Shared
+@using HyperAutomation.ControlRoom.Shared.Utils
 @using BlazorStrap 
 @inject NavigationManager NavigationManager
 
